[package]
name = "rart-rs"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
heapless = "0.7.10"
const_format = "0.2.23"
chrono = { version = "0.4.19", default_features = false }
rart = { path = "src/rart" }

[features]
std = ["chrono/default"]
alloc_rtos = []
alloc_rust = []
peripherals = []

# RART

